Bring back JDK17 support.